# async2

./: .gitattributes  .gitignore  .gitmodules  API_VERSIONS.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  build_deps.bat  build_deps.sh  clean.sh  smsdk_config.h  update_openssl.sh  version_script.lds
.github/workflows/: build.yml
cmake/: update_timestamp.cmake
docker/: Dockerfile  build.sh
sourcepawn/: async2.inc  async2_lru.inc  test_uaf.sp
sourcepawn/async2/: crypto.inc  curl_enums.inc  dns.inc  hjson.inc  http.inc  intobject.inc  iterator.inc  json.inc  linkedlist.inc  msgpack.inc  tcp.inc  time.inc  udp.inc  url.inc  utils.inc  ws.inc
sourcepawn/async2_test/: async2_test.sp  test_crypto.sp  test_dns.sp  test_handles.sp  test_http.sp  test_intmap.sp  test_json.sp  test_linkedlist.sp  test_lru_cache.sp  test_msgpack.sp  test_stress.sp  test_tcp.sp  test_time.sp  test_udp.sp  test_ws.sp
src/: compile_time.cpp  compression.cpp  compression.h  dns_resolver.cpp  dns_resolver.h  event_loop.cpp  event_loop.h  extension.cpp  extension.h  handle_manager.cpp  handle_manager.h  header_map.h  http_request.cpp  http_request.h  linked_list.cpp  linked_list.h  locked_queue.h  natives.h  natives_crypto.cpp  natives_curl.cpp  natives_dns.cpp  natives_hjson.cpp  natives_http.cpp  natives_json.cpp  natives_linkedlist.cpp  natives_msgpack.cpp  natives_tcp.cpp  natives_time.cpp  natives_udp.cpp  natives_url.cpp  natives_utils.cpp  natives_ws.cpp  socket_event.h  tcp_socket.cpp  tcp_socket.h  udp_socket.h  ws_connection.cpp  ws_connection.h
src/data/: data_handle.cpp  data_handle.h  data_iterator.cpp  data_iterator.h  data_map.h  data_node.cpp  data_node.h  data_node_pool.h
src/hjson/: hjson_parse.cpp  hjson_parse.h
src/msgpack/: msgpack_parse.cpp  msgpack_parse.h  msgpack_serialize.cpp  msgpack_serialize.h
test/: CMakeLists.txt  bench_compare.cpp  bench_datanode.cpp  bench_json.cpp  bench_maps.cpp  bench_node.h  bench_ptr.cpp  gen_bench_data.py  go.mod  test_handles.cpp  test_hjson.cpp  test_json_parser.cpp  test_msgpack.cpp  test_server.go
test/data/: bench.json
test/hjson_assets/: comments7_test.hjson  strings_result.hjson  windowseol_test.hjson
todo/: datahandle_cache_design.md
tools/: gen_enums.py
